--- a/src/assets/scss/components/competence-section.scss
+++ b/src/assets/scss/components/competence-section.scss
@@ -2,7 +2,7 @@
   .competence-wrap {
     display: flex;
     background-color: rgba(64, 204, 181, 0.1);
-    margin-bottom: 165px;
+    // margin-bottom: 165px;
     @media (max-width: 767px) {
       flex-direction: column;
     }
