--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,5 +14,7 @@
 @import "components/galerie-section";
 @import "components/contact-section";
 
+@import "components/aarau-west-section";
+
 // common styles
 @import "base/common";
