veterinar-page desktop / added gallery-page

--- a/src/assets/scss/components/aarau-west-section.scss
+++ b/src/assets/scss/components/aarau-west-section.scss
@@ -1,10 +1,11 @@
 .aarau-west-section {
-  padding: 100px 0;
+  padding: 102px 0 118px;
   background: linear-gradient(45deg, #3fc7b1, #36637a);
   .section-title {
     color: #fff;
     max-width: 580px;
-    margin: 0 auto 25px;
+    margin: 0 auto 32px;
+    line-height: 1.22;
   }
   .section-subtitle {
     color: #fff;
