--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -15,6 +15,7 @@
 @import "components/contact-section";
 
 @import "components/aarau-west-section";
+@import "components/news-section";
 
 // common styles
 @import "base/common";
