--- a/src/assets/scss/components/news-section.scss
+++ b/src/assets/scss/components/news-section.scss
@@ -1,5 +1,8 @@
 .news-section {
-  padding: 190px 0;
+  padding: 124px 0;
+  @media (min-width: 1024px) {
+    padding: 190px 0;
+  }
   .section-title {
     margin: 0;
     line-height: 1.2;
@@ -11,11 +14,17 @@
   }
   .item-wrap {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 72px;
+    @media (min-width: 1024px) {
+      margin-top: 10px;
+    }
   }
 }
 .news-wrap {
   display: flex;
+  @media (max-width: 1023px) {
+    flex-wrap: wrap;
+  }
 }
 .news-item {
   display: flex;
