cut cookie-section / fixed homepage galley

--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -207,6 +207,11 @@ ul {
     margin-bottom: 20px;
     font-size: 14px;
   }
+  .cookie-close-btn {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
 }
 .container {
   padding-left: 15px;
