fixed homepage gallery responsive

--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -47,6 +47,7 @@ button:hover,
   outline: none;
   font-family: "Replica-Regular";
   line-height: 1;
+  border: transparent;
 }
 ul {
   padding: 0;
