--- a/src/assets/scss/components/galerie-section.scss
+++ b/src/assets/scss/components/galerie-section.scss
@@ -10,16 +10,21 @@
   .galerie-wrap {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -20px 132px;
+    margin: 0 -10px 132px;
+    @media (min-width: 768px) {
+      margin: 0 -20px 132px;
+    }
     .galerie-img {
       display: none;
-      padding: 0 20px 60px;
+      flex: 0 0 50%;
+      padding: 0 10px 20px;
       &:nth-child(-n + 4) {
         display: flex;
       }
-
       @media (min-width: 768px) {
         display: none;
+        flex: 0 0 33.33%;
+        padding: 0 20px 50px;
         &:nth-child(-n + 6) {
           display: flex;
         }
@@ -27,6 +32,7 @@
       @media (min-width: 1024px) {
         display: flex;
         flex: 0 0 25%;
+        padding: 0 20px 60px;
       }
     }
   }
