--- a/src/assets/scss/components/hero.scss
+++ b/src/assets/scss/components/hero.scss
@@ -129,16 +129,32 @@
       }
     }
     .hero-content {
-      max-width: 525px;
+      // max-width: 525px;
+      @media (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+      }
       .subtitle-page {
         font-size: 21px;
         margin-bottom: 18px;
+        @media (max-width: 767px) {
+          order: 1;
+        }
         @media (max-width: 1023px) {
           margin-bottom: 25px;
         }
       }
+      .title-page {
+        @media (max-width: 767px) {
+          order: 2;
+        }
+      }
     }
     .hero-img {
+      position: relative;
+      max-width: 380px;
+      order: 4;
+      margin: 0 auto;
       @media (min-width: 768px) {
         max-height: 382px;
         position: absolute;
@@ -146,9 +162,10 @@
         top: 57px;
       }
       @media (min-width: 1024px) {
-        position: relative;
+        // position: relative;
         max-height: 490px;
-        margin-top: 66px;
+        top: 64px;
+        right: 0;
       }
       img {
         position: relative;
@@ -190,6 +207,11 @@
   .section-subtitle {
     font-size: 21px;
     margin-bottom: 83px;
+    @media (max-width: 767px) {
+      order: 3;
+      display: flex;
+      color: #fff;
+    }
     @media (min-width: 1024px) {
       margin-bottom: 75px;
     }
@@ -202,11 +224,18 @@
       font-size: 30px;
       margin-bottom: 30px;
     }
+    @media (max-width: 767px) {
+      order: 5;
+    }
   }
   .description-txt {
     color: #4b4b4b;
     font-size: 24px;
     line-height: 1.35;
+    max-width: 525px;
+    @media (max-width: 767px) {
+      order: 6;
+    }
   }
 }
 
