--- a/src/assets/scss/components/galerie-section.scss
+++ b/src/assets/scss/components/galerie-section.scss
@@ -11,8 +11,8 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0 -10px 132px;
-    @media (min-width: 1024px) {
-      margin: 0 -20px 132px;
+    @media (min-width: 768px) {
+      margin: 0 -15px 132px;
     }
     .galerie-img {
       display: none;
@@ -24,7 +24,7 @@
       @media (min-width: 768px) {
         display: none;
         flex: 0 0 33.33%;
-        padding: 0 20px 50px;
+        padding: 0 15px 50px;
         &:nth-child(-n + 6) {
           display: flex;
         }
@@ -32,6 +32,9 @@
       @media (min-width: 1024px) {
         display: flex;
         flex: 0 0 25%;
+        padding: 0 15px 60px;
+      }
+      @media (min-width: 1200px) {
         padding: 0 20px 60px;
       }
     }
