--- a/src/assets/scss/components/galerie-section.scss
+++ b/src/assets/scss/components/galerie-section.scss
@@ -21,6 +21,9 @@
       &:nth-child(-n + 4) {
         display: flex;
       }
+      &:nth-child(-n + 8) {
+        display: none;
+      }
       @media (min-width: 768px) {
         display: none;
         flex: 0 0 33.33%;
