--- a/src/assets/scss/components/news-section.scss
+++ b/src/assets/scss/components/news-section.scss
@@ -1,5 +1,8 @@
 .news-section {
-  padding: 124px 0;
+  padding: 90px 0;
+  @media (min-width: 768px) {
+    padding: 124px 0;
+  }
   @media (min-width: 1024px) {
     padding: 190px 0;
   }
@@ -8,13 +11,19 @@
     line-height: 1.2;
   }
   .title-wrap {
-    max-width: 325px;
+    max-width: 250px;
     width: 100%;
     padding-right: 50px;
+    @media (min-width: 768px) {
+      max-width: 325px;
+    }
   }
   .item-wrap {
     width: 100%;
-    margin-top: 72px;
+    margin-top: 63px;
+    @media (min-width: 768px) {
+      margin-top: 72px;
+    }
     @media (min-width: 1024px) {
       margin-top: 10px;
     }
@@ -32,24 +41,38 @@
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12);
   background-color: #fff;
   border-radius: 15px;
-  margin: 0 0 35px;
+  margin: 0 0 23px;
+  @media (min-width: 768px) {
+    margin: 0 0 35px;
+  }
   .news-img {
     width: 100%;
-    max-width: 127px;
-    max-height: 88px;
-    border-radius: 15px;
+    max-width: 62px;
+    max-height: 65px;
+    border-radius: 10px;
     object-fit: cover;
+    @media (min-width: 768px) {
+      max-width: 127px;
+      max-height: 88px;
+      border-radius: 15px;
+    }
   }
   .news-description {
     padding: 0 31px;
     line-height: 1.9;
   }
   .news-title {
-    font-size: 22px;
+    font-size: 16px;
     font-family: "Replica-Bold";
+    @media (min-width: 768px) {
+      font-size: 22px;
+    }
   }
   .news-subtitle {
-    font-size: 16px;
+    font-size: 14px;
+    @media (min-width: 768px) {
+      font-size: 16px;
+    }
   }
   .arrow {
     display: flex;
@@ -59,8 +82,12 @@
     color: #fff;
     margin: 0 0 0 auto;
     width: 100%;
-    max-width: 85px;
-    height: 88px;
+    max-width: 60px;
+    height: 65px;
+    @media (min-width: 768px) {
+      max-width: 85px;
+      height: 88px;
+    }
     svg {
       width: 100%;
       height: 100%;
