added veterinarians page on WP / create areas-expertise page

--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -134,6 +134,15 @@ ul {
   &.full-btn {
     max-width: 100%;
     border-radius: 0;
+    &:hover {
+      background-color: #37617a;
+      .arrow {
+        &::before,
+        &::after {
+          background-color: #40ccb5;
+        }
+      }
+    }
   }
 }
 .close-btn {
