--- a/src/assets/scss/components/contact-section.scss
+++ b/src/assets/scss/components/contact-section.scss
@@ -13,6 +13,9 @@
       flex-direction: row;
     }
   }
+  a {
+    color: #4a4a4a;
+  }
   .contact-col {
     font-family: "Replica-Regular";
     line-height: 1.4;
