--- a/src/assets/scss/components/hero.scss
+++ b/src/assets/scss/components/hero.scss
@@ -119,7 +119,7 @@
   }
 }
 
-.veterinar-page {
+.single-veterinarians {
   .title-page {
     margin-bottom: 78px;
     @media (min-width: 768px) {
