--- a/src/assets/scss/components/galerie-section.scss
+++ b/src/assets/scss/components/galerie-section.scss
@@ -21,7 +21,7 @@
       &:nth-child(-n + 4) {
         display: flex;
       }
-      &:nth-child(-n + 8) {
+      &:nth-child(n + 9) {
         display: none;
       }
       @media (min-width: 768px) {
