--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -417,6 +417,9 @@
   padding: 18px 36px 15px 15px;
   border: 1px solid transparent;
   background-color: transparent;
+  &:hover {
+    border: 1px solid transparent;
+  }
 }
 .navbar-toggler:focus {
   outline: none;
