--- a/src/assets/scss/components/slider-section.scss
+++ b/src/assets/scss/components/slider-section.scss
@@ -41,7 +41,8 @@
   .slider-item {
     max-width: 250px;
     transition: all 0.3s;
-    margin-bottom: 50px;
+    margin: 0 auto 50px;
+    box-shadow: 3px 3px 10px 0 #d8cfcf;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     &:hover {
@@ -75,7 +76,17 @@
       flex-direction: column;
     }
     &.gallery {
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      width: 100%;
+      @media (min-width: 540px) {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px 4vw;
+      }
+      @media (min-width: 1024px) {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px 7vw;
+      }
       .slider-item {
         max-width: 320px;
       }
